Minor changes in the article.

--- a/_posts/2019-08-08-oled-vuln.md
+++ b/_posts/2019-08-08-oled-vuln.md
@@ -7,7 +7,7 @@ featured-img: oled-vuln
 
 # In short
 
-On May 7, security researcher Christian Reitter contacted us through our [Bounty](https://www.ledger.com/bounty-program/) program to inform us of a side-channel vulnerability which could potentially allow an attacker to spy on users of hardware wallets, including Ledger Nano S and Ledger Nano X. A conceived exploit would consist of measuring the power consumption of the device to partially recover confidential information displayed on the OLED screen of the device. We would like to thank Christian Reitter for reaching out to impacted vendors and coordinating with Ledger to facilitate the disclosure process.
+On May 7, security researcher Christian Reitter contacted us through our [Bounty program](https://www.ledger.com/bounty-program/) to inform us of a side-channel vulnerability which could potentially allow an attacker to spy on users of hardware wallets, including Ledger Nano S and Ledger Nano X. A conceived exploit would consist of measuring the power consumption of the device to partially recover confidential information displayed on the OLED screen of the device. We would like to thank Christian Reitter for reaching out to impacted vendors and coordinating with Ledger to facilitate the disclosure process.
 
 After a thorough review, the vulnerability was considered to be non-critical. To summarize, the attack scenario detailed below remains theoretical and less practical than simply installing a camera in a room to read the screen of a victim’s hardware wallet. Nonetheless, this interesting attack vector is a good reminder that using your hardware wallet in a secure environment is paramount for the security of our users' crypto assets.
 
@@ -83,4 +83,6 @@ The screen vulnerability applies to OLED screens. As the Ledger Blue features an
 
 **Has this vulnerability been exploited?**
 There is no evidence so far that this vulnerability has been exploited.
+
+In case you have any questions regarding the integrity of your Ledger devices, please check the **answers to frequently asked questions** in our [Ledger Support center](https://support.ledger.com/hc/en-us/articles/360033473414).
 
