Minor change in the article.

--- a/_posts/2019-08-08-oled-vuln.md
+++ b/_posts/2019-08-08-oled-vuln.md
@@ -84,5 +84,5 @@ The screen vulnerability applies to OLED screens. As the Ledger Blue features an
 **Has this vulnerability been exploited?**
 There is no evidence so far that this vulnerability has been exploited.
 
-In case you have any questions regarding the integrity of your Ledger devices, please check the **answers to frequently asked questions** in our [Ledger Support center](https://support.ledger.com/hc/en-us/articles/360033473414).
+In case you have any questions regarding the integrity of your Ledger devices, please check the [answers to frequently asked questions](https://support.ledger.com/hc/en-us/articles/360033473414) in our Ledger Support center.
 
