Added missing image.

--- a/_posts/2019-08-08-oled-vuln.md
+++ b/_posts/2019-08-08-oled-vuln.md
@@ -60,6 +60,8 @@ _<center>Without the countermeasure: the exact same pattern is repeated every 5.
 <br><br>
 
 ![pin5invert](/assets/oled-vuln/pin5invert-small.jpg)
+
+![trace2](/assets/oled-vuln/trace2.png)
 _<center>The countermeasure drastically alters the pattern by adding noise to the power consumption</center>_
 
 # Keeping users safe
