--- a/_posts/2019-08-08-oled-vuln.md
+++ b/_posts/2019-08-08-oled-vuln.md
@@ -52,14 +52,18 @@ When applying these countermeasures, we significantly reduce the dependency betw
 
 As an illustration of the work we have done on the screen display, here are two pictures showing the real-time power consumption of a Ledger Nano S before and after implementing the countermeasures.
 
-![pin5](/assets/oled-vuln/pin5-small.jpg)
+<p align="center">
+<img src="/assets/oled-vuln/pin5-small.jpg">
+</p>
 
 ![trace1](/assets/oled-vuln/trace1.png)
 _<center>Without the countermeasure: the exact same pattern is repeated every 5.5 ms (every screen update)</center>_
 
 <br><br>
 
-![pin5invert](/assets/oled-vuln/pin5invert-small.jpg)
+<p align="center">
+<img src="/assets/oled-vuln/pin5invert-small.jpg">
+</p>
 
 ![trace2](/assets/oled-vuln/trace2.png)
 _<center>The countermeasure drastically alters the pattern by adding noise to the power consumption</center>_
