--- a/_posts/2019-08-07-oled-vuln.md
+++ b/_posts/2019-08-07-oled-vuln.md
@@ -11,7 +11,7 @@ On May 7, security researcher Christian Reitter contacted us through our [Bounty
 
 After a thorough review, the vulnerability was considered to be non-critical. To summarize, the attack scenario detailed below remains theoretical and less practical than simply installing a camera in a room to read the screen of a victim’s hardware wallet. Nonetheless, this interesting attack vector is a good reminder that using your hardware wallet in a secure environment is paramount for the security of our users' crypto assets.
 
-Despite a low threat level, Ledger’s security team, Ledger Donjon, has reproduced the setup reported by Christian Reitter to investigate the vulnerability and has developed countermeasures against it. These countermeasures will be included in regular firmware updates for the Ledger Nano S and Ledger Nano X, scheduled for Q4 of 2019.
+Despite a low threat level, we reproduced the setup reported by Christian Reitter to investigate the vulnerability and has developed countermeasures against it. These countermeasures will be included in regular firmware updates for the Ledger Nano S and Ledger Nano X, scheduled for Q4 of 2019.
 
 Please see below for technical details on the vulnerability and how our team has worked to fix it.
 
@@ -41,7 +41,7 @@ As with all security research, we took this vulnerability disclosure seriously. 
 ![scope](/assets/oled-vuln/scope.jpg)
 _<center>The setup we used: a Ledger Nano S connected to a modified cable: A resistor + power probe connected to an oscilloscope show the real-time power consumption of the device (the trace in green). Each repeated pattern corresponds to an entire screen update of the PIN interface on the Nano S device.</center>_
 
-The Ledger Donjon, our security team, then pushed their study further and mounted a side-channel attack to the point where they could actually distinguish words of a recovery phrase. This allowed us to understand the nature of the leakage exposed by the vulnerability and gave us ideas for countermeasures.
+We then pushed their study further and mounted a side-channel attack to the point where they could actually distinguish words of a recovery phrase. This allowed us to understand the nature of the leakage exposed by the vulnerability and gave us ideas for countermeasures.
 
 To counteract the screen vulnerability we propose a set of countermeasures:
 
