posts: add a description field to each post
to allow slack to generate valid <meta property="og:description"> tags.

--- a/_posts/2019-02-14-rainbow.md
+++ b/_posts/2019-02-14-rainbow.md
@@ -2,6 +2,7 @@
 layout: post
 title: Rainbow
 summary: "Introducing Rainbow: Donjon's side-channel analysis simulation tool"
+description: "Introducing Rainbow: Donjon's side-channel analysis simulation tool"
 featured-img: rainbow
 
 ---
