--- a/_posts/2019-08-07-oled-vuln.md
+++ b/_posts/2019-08-07-oled-vuln.md
@@ -2,6 +2,7 @@
 layout: post
 title: OLED screen (minor) vulnerability
 summary: Details on the side-channel vulnerability reported by Christian Reitter
+description: Details on the side-channel vulnerability reported by Christian Reitter
 featured-img: oled-vuln
 ---
 
