--- a/_lsb/001.md
+++ b/_lsb/001.md
@@ -4,8 +4,6 @@ title: Ledger Security Bulletin \#001
 summary: Padding oracle attack on SCP
 ---
 
-# 
-
 20 March 2018: Padding oracle attack on SCP.
 
 
@@ -95,5 +93,5 @@ process.
 
 ## References
 
-- [1] https://www.ledger.com/firmware-1-4-deep-dive-security-fixes/
-- [2] https://en.wikipedia.org/wiki/Padding_oracle_attack
+- [1] <a name="1"></a> [https://www.ledger.com/firmware-1-4-deep-dive-security-fixes/](Firmware 1.4: deep dive into three vulnerabilities which have been fixed - Ledger)
+- [2] <a name="2"></a> [https://en.wikipedia.org/wiki/Padding_oracle_attack](Padding oracle attack - Wikipedia)
