lsb: fix 001 layout

--- a/_lsb/001.md
+++ b/_lsb/001.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Ledger Security Bulletin \#001
+title: Ledger Security Bulletin #001
 summary: Padding oracle attack on SCP
 ---
 
@@ -93,5 +93,5 @@ process.
 
 ## References
 
-- [1] <a name="1"></a> [https://www.ledger.com/firmware-1-4-deep-dive-security-fixes/](Firmware 1.4: deep dive into three vulnerabilities which have been fixed - Ledger)
-- [2] <a name="2"></a> [https://en.wikipedia.org/wiki/Padding_oracle_attack](Padding oracle attack - Wikipedia)
+1. <a name="1"></a> [Firmware 1.4: deep dive into three vulnerabilities which have been fixed - Ledger](https://www.ledger.com/firmware-1-4-deep-dive-security-fixes/)
+2. <a name="2"></a> [Padding oracle attack - Wikipedia](https://en.wikipedia.org/wiki/Padding_oracle_attack)
