lsb: drop the number sign since it renders incorrectly

--- a/_lsb/001.md
+++ b/_lsb/001.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Ledger Security Bulletin #001
+title: Ledger Security Bulletin 001
 summary: Padding oracle attack on SCP
 ---
 
