--- a/_lsb/003.md
+++ b/_lsb/003.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Ledger Security Bulletin #003
+title: Ledger Security Bulletin 003
 summary: Isolation vulnerability
 ---
 
