--- a/_lsb/004.md
+++ b/_lsb/004.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Ledger Security Bulletin #004
+title: Ledger Security Bulletin 004
 summary: Bitcoin change address injection
 ---
 
