--- a/_lsb/005.md
+++ b/_lsb/005.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Ledger Security Bulletin #005
+title: Ledger Security Bulletin 005
 summary: MCU Bootloader verification bypass
 ---
 
