--- a/_lsb/006.md
+++ b/_lsb/006.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Ledger Security Bulletin #006
+title: Ledger Security Bulletin 006
 summary: OLED screen side-channel vulnerability
 ---
 
