lsb: fix typo in 007

--- a/_lsb/007.md
+++ b/_lsb/007.md
@@ -129,8 +129,8 @@ A patch on both the Nano application ([commit 5d0658ad](#3)) and the Monero
 client ([PR 5958](#4)) were issued that prevents the replay of values across
 transactions. This also protects against possible variants of the attack.
 
-We are also currently working to provide a simpler and secure protocol in the
-future, that would also avoid reusing values within the same transaction.
+We are also currently working to provide a simpler and more secure protocol in
+the future, that would also avoid reusing values within the same transaction.
 
 
 
@@ -138,5 +138,5 @@ future, that would also avoid reusing values within the same transaction.
 
 1. <a name="1"></a> [PS3 Epic Fail - 27C3](https://media.ccc.de/v/27c3-4087-en-console_hacking_2010#t=2160)
 2. <a name="2"></a> [Ring Confidential Transactions - Monero Research Lab](https://web.getmonero.org/resources/research-lab/pubs/MRL-0005.pdf)
-3. <a name="3"></a> [add hmac on secret during TX - GitHub]https://github.com/LedgerHQ/ledger-app-monero/commit/5d0658ad6369f3d0ff2d10ee9effa410eb185b98
+3. <a name="3"></a> [add hmac on secret during TX - GitHub](https://github.com/LedgerHQ/ledger-app-monero/commit/5d0658ad6369f3d0ff2d10ee9effa410eb185b98)
 4. <a name="4"></a> [For client v0.15 with app 1.4: protocol fix + address display #5958 - GitHub](https://github.com/monero-project/monero/pull/5958)
