lsb: update 005 credits

--- a/_lsb/005.md
+++ b/_lsb/005.md
@@ -45,7 +45,9 @@ consequence:
 
 ## Credits
 
-Dmitry Nedospasov, Josh Datko and Thomas Roth discovered the vulnerability.
+This vulnerability has been independently discovered by Juliano Rizzo from
+[Coinspect](https://coinspect.com) and Dmitry Nedospasov, Josh Datko and Thomas
+Roth.
 
 
 
