add authors to each post

--- a/_posts/2019-02-14-rainbow.md
+++ b/_posts/2019-02-14-rainbow.md
@@ -4,7 +4,7 @@ title: Rainbow
 summary: "Introducing Rainbow: Donjon's side-channel analysis simulation tool"
 description: "Introducing Rainbow: Donjon's side-channel analysis simulation tool"
 featured-img: rainbow
-
+author: Victor Servant
 ---
 
 🌈[Rainbow](https://github.com/Ledger-Donjon/rainbow) is a Python module designed for two purposes. The first one is to help embedded developers test their implementations against basic side-channel attacks (together with our side-channel analysis tool [Lascar](https://medium.com/ledger-on-security-and-blockchain/lascar-donjon-side-channel-library-12aeed76ce1e) and at a later point, against controlled fault injection as well. 
