add missing author

--- a/_posts/2019-08-07-oled-vuln.md
+++ b/_posts/2019-08-07-oled-vuln.md
@@ -4,6 +4,7 @@ title: OLED screen (minor) vulnerability
 summary: Details on the side-channel vulnerability reported by Christian Reitter
 description: Details on the side-channel vulnerability reported by Christian Reitter
 featured-img: oled-vuln
+author: Manuel San Pedro
 ---
 
 # In short
