lsb 007: mention monero version

--- a/_lsb/007.md
+++ b/_lsb/007.md
@@ -125,6 +125,8 @@ X users.
 
 ## Remediation
 
+The issue is fixed in the Monero app version 1.5.1.
+
 A patch on both the Nano application ([commit 5d0658ad](#3)) and the Monero
 client ([PR 5958](#4)) were issued that prevents the replay of values across
 transactions. This also protects against possible variants of the attack.
