lsb: fix 008 layout

--- a/_lsb/008.md
+++ b/_lsb/008.md
@@ -66,7 +66,7 @@ to retrieve the secret spend key $b$.
 First, `monero_apdu_sc_sub` is called with $henc(x)$ for both arguments and
 returns:
 
-monero_apdu_sc_sub$(henc(a), henc(a)) = henc(0)$
+$\text{monero_apdu_sc_sub}$(henc(a), henc(a)) = henc(0)$
 
 A valid pair {$0$, $henc(0)$} can be injected in any command. Having the control
 of this zero value is important since it allows canceling parts of any other
@@ -78,16 +78,16 @@ Controlling the zero value, a decryption oracle can be built using the
 `monero_apdu_mlsag_sign` command. The command can be called in the following way
 or any $henc(x)$ to retrive $x$:
 
-monero_apdu_mlsag_sign$(henc(x), henc(0)) = x-c \times 0 = x$
+$\text{monero_apdu_mlsag_sign}$(henc(x), henc(0)) = x-c \times 0 = x$
 
 At this point, a decryption oracle is available.
 
 #### Step 3 : Retrieving the spend key
 
 The final step involves `monero_apdu_derive_secret_key`. Let $fsk$ be the fake
-spend key `C_FAKE_SEC_SPEND_KEY`!
+spend key `C_FAKE_SEC_SPEND_KEY`:
 
-monero_apdu_derive_secret_key$(henc(0), 0, henc(fsk))$
+$\text{monero_apdu_derive_secret_key}$(henc(0), 0, henc(fsk))$
 
 $$ = keccak(0||0) + b = hmac(sk)$$
 
@@ -127,7 +127,7 @@ scalar with no reduction modulo the order of the curve.
 
 Deriving the generated point $P$ at step 1:
 
-monero_apdu_generate_key_derivation$(P=x.G, henc(a))$
+$\text{monero_apdu_generate_key_derivation}$(P=x.G, henc(a))$
 
 $$= (8 x.a).G$$
 $$= (8x).a.G$$
@@ -149,7 +149,7 @@ $$sk = keccak(P||0) + b = henc(sk)$$
 Finally, `monero_apdu_mlsag_sign` allows to retrieve the spend key based on the
 value obtained at step 2 and 3, and by using $P$ as a simple 256 bits scalar:
 
-monero_apdu_mlsag_sign$(henc(sk), henc(P))$
+$\text{monero_apdu_mlsag_sign}$(henc(sk), henc(P))$
 
 $$ss = sk-c \times P$$
 
