lsb: fix 008 layout

--- a/_lsb/008.md
+++ b/_lsb/008.md
@@ -78,7 +78,7 @@ Controlling the zero value, a decryption oracle can be built using the
 `monero_apdu_mlsag_sign` command. The command can be called in the following way
 or any $henc(x)$ to retrive $x$:
 
-$\text{monero_apdu_mlsag_sign}(henc(x), henc(0)) = x-c \times 0 = x$
+$\text{monero_apdu_mlsag_sign}(henc(x), henc(0)) = x-c \* 0 = x$
 
 At this point, a decryption oracle is available.
 
@@ -140,7 +140,7 @@ a valid set $\{P, enc(P), hmac(P)\}$ is now known.
 
 `monero_apdu_derive_secret_key` can be called with the following parameter:
 
-monero_apdu_derive_secret_key$(henc(P), 0, henc(b))$
+$\text{monero_apdu_derive_secret_key}(henc(P), 0, henc(b))$
 
 $$sk = keccak(P||0) + b = henc(sk)$$
 
