lsb: fix 008 layout

--- a/_lsb/008.md
+++ b/_lsb/008.md
@@ -50,7 +50,7 @@ the subsequent two attacks rely on the following commands:
 
 - `monero_apdu_sc_sub`: $henc(x), henc(y) \rightarrow henc(x-y)$
 - `monero_apdu_generate_key_derivation`: $P, henc(x) \rightarrow enc(8x.P)$
-- `monero_apdu_derive_secret_key`: $henc(P), index, henc(x) \rightarrow henc(Keccak(P||index)+b)$
+- `monero_apdu_derive_secret_key`: $henc(P), index, henc(x) \rightarrow henc(\text{Keccak}(P \mathbin\Vert index)+b)$
 - `monero_apdu_mlsag_sign`: $henc(alpha), henc(x) \rightarrow ss = (alpha - c * x) \mod l$
 
 
@@ -89,13 +89,13 @@ spend key `C_FAKE_SEC_SPEND_KEY`:
 
 $\text{monero_apdu_derive_secret_key}(henc(0), 0, henc(fsk))$
 
-$$ = keccak(0||0) + b = hmac(sk)$$
+$$ = \text{Keccak}(0 \mathbin\Vert 0) + b = hmac(sk)$$
 
 $sk$ being the _spend key_.
 
 So using the decryption oracle from step 2, $sk$ can be decrypted to get:
 
-$b = sk - keccak(0||0)$.
+$b = sk - \text{Keccak}(0 \mathbin\Vert  b0)$.
 
 where `b` is the private spend key.
 
@@ -142,7 +142,7 @@ a valid set $\{P, enc(P), hmac(P)\}$ is now known.
 
 $\text{monero_apdu_derive_secret_key}(henc(P), 0, henc(b))$
 
-$$sk = keccak(P||0) + b = henc(sk)$$
+$$sk = \text{Keccak}(P v0) + b = henc(sk)$$
 
 ### Step 4 : spend key extraction
 
@@ -157,17 +157,17 @@ $$ss = sk-c \* P$$
 
 Now, recall that:
 
-$$sk = keccak(P||0) + b$$
+$$sk = \text{Keccak}(P \mathbin\Vert 0) + b$$
 
 and `P` is known.
 
 So replacing $sk$ in the previous computation results in:
 
-$$ss = keccak(P||0) + b - c \* P$$
+$$ss = \text{Keccak}(P \mathbin\Vert 0) + b - c \times P$$
 
 and thus:
 
-$$b = ss - keccak(P||0) + c \* P$$.
+$$b = ss - \text{Keccak}(P \mathbin\Vert 0) + c \times P$$.
 
 So again, the spend key $b$ is retrieved.
 
