Fix some misspellings and inaccuracies in LSB 008

--- a/_lsb/008.md
+++ b/_lsb/008.md
@@ -42,15 +42,15 @@ Finally, with the notations:
 
 - $P$: point
 - $x$, $y$, $alpha$, $ss$, $c$: scalar
-- $a$ : scalar, private view key
-- $b$ : scalar, private spend key
-- $l$ : scalar, curve order
+- $a$: scalar, private view key
+- $b$: scalar, private spend key
+- $l$: scalar, curve order
 
 the subsequent two attacks rely on the following commands:
 
 - `monero_apdu_sc_sub`: $henc(x), henc(y) \rightarrow henc(x-y)$
-- `monero_apdu_generate_key_derivation`: $P, henc(x) \rightarrow enc(8x.P)$
-- `monero_apdu_derive_secret_key`: $henc(P), index, henc(x) \rightarrow henc(\text{Keccak}(P \mathbin\Vert index)+b)$
+- `monero_apdu_generate_key_derivation`: $P, henc(x) \rightarrow henc(8x.P)$
+- `monero_apdu_derive_secret_key`: $henc(P), index, \text{C_FAKE_SEC_SPEND_KEY} \rightarrow henc(\text{Keccak}(P \mathbin\Vert index)+b)$
 - `monero_apdu_mlsag_sign`: $henc(alpha), henc(x) \rightarrow ss = (alpha - c * x) \mod l$
 
 
@@ -76,9 +76,9 @@ command's intermediate computation.
 
 Controlling the zero value, a decryption oracle can be built using the
 `monero_apdu_mlsag_sign` command. The command can be called in the following way
-or any $henc(x)$ to retrive $x$:
+or any $henc(x)$ to retrieve $x$:
 
-$\text{monero_apdu_mlsag_sign}(henc(x), henc(0)) = x-c \* 0 = x$
+$$\text{monero_apdu_mlsag_sign}(henc(x), henc(0)) = x-c * 0 = x$$
 
 At this point, a decryption oracle is available.
 
@@ -87,7 +87,7 @@ At this point, a decryption oracle is available.
 The final step involves `monero_apdu_derive_secret_key`. Let $fsk$ be the fake
 spend key `C_FAKE_SEC_SPEND_KEY`:
 
-$\text{monero_apdu_derive_secret_key}(henc(0), 0, henc(fsk))$
+$\text{monero_apdu_derive_secret_key}(henc(0), 0, fsk)$
 
 $$ = \text{Keccak}(0 \mathbin\Vert 0) + b = hmac(sk)$$
 
@@ -129,9 +129,9 @@ Deriving the generated point $P$ at step 1:
 
 $\text{monero_apdu_generate_key_derivation}(P=x.G, henc(a))$
 
-$$= (8 x.a).G$$
-$$= (8x).a.G$$
-$$= 8x.A$$
+$$= henc((8 x.a).G)$$
+$$= henc((8x).a.G)$$
+$$= henc(8x.A)$$
 $$= henc(P)$$
 
 a valid set $\{P, enc(P), hmac(P)\}$ is now known.
@@ -151,7 +151,7 @@ value obtained at step 2 and 3, and by using $P$ as a simple 256 bits scalar:
 
 $\text{monero_apdu_mlsag_sign}(henc(sk), henc(P))$
 
-$$ss = sk-c \* P$$
+$$ss = sk-c * P$$
 
 `P` is considered a simple scalar in the above.
 
