LSB-008: make it clearer what is computed by the app

--- a/_lsb/008.md
+++ b/_lsb/008.md
@@ -129,12 +129,12 @@ Deriving the generated point $P$ at step 1:
 
 $\text{monero_apdu_generate_key_derivation}(P=x.G, henc(a))$
 
-$$= henc((8 x.a).G)$$
-$$= henc((8x).a.G)$$
-$$= henc(8x.A)$$
-$$= henc(P)$$
+The app computes:
 
-a valid set $\{P, enc(P), hmac(P)\}$ is now known.
+- $a \leftarrow henc(a)$
+- $8a.x.G = (8x).a.G = 8x.A$
+
+which equals $P$ by definition above. The output is then $henc(P)$, hence we learn a valid set $\{P, enc(P), hmac(P)\}$.
 
 #### Step 3
 
