LSB-009: fix layout

--- a/_lsb/009.md
+++ b/_lsb/009.md
@@ -49,5 +49,5 @@ vulnerability and reported it through our bug bounty program.
 
 ## References
 
-1. <a name="1"></a> [Transaction Unlock Time | Moneropedia](https://web.getmonero.org/resources/moneropedia/unlocktime.html)
+1. <a name="1"></a> [Transaction Unlock Time - Moneropedia](https://web.getmonero.org/resources/moneropedia/unlocktime.html)
 2. <a name="2"></a> [Add timelock verification on device #6436](https://github.com/monero-project/monero/pull/6436)
