lsb 010: fix invalid link

--- a/_lsb/010.md
+++ b/_lsb/010.md
@@ -46,7 +46,7 @@ The vulnerability is fixed from version 1.4.0 of the Bitcoin app (being used as
 a library by the other apps.)
 
 It's worth noting that several hardware wallets implementation are affected even
-if this issue has been publicly [discussed]([#2]) a few years ago.
+if this issue has been publicly [discussed](#2) a few years ago.
 
 
 ## Credits
