--- a/_lsb/012.md
+++ b/_lsb/012.md
@@ -21,7 +21,7 @@ confirmed while it isn't.
 
 ## Impact
 
-Several attacks scenarios are conceivable, all relying on an invalid balance
+Several attack scenarios are conceivable, all relying on an invalid balance
 displayed by Ledger Live.
 
 Attackers can abuse this problem by sending their victim a transaction of a big
