add fixed Ledger Live version, add references

--- a/_lsb/012.md
+++ b/_lsb/012.md
@@ -44,10 +44,11 @@ websites, which will be marked as *unconfirmed*.
 ## Remediation
 
 The remediation of this vulnerability involves fixes in various components of
-Ledger stack: Ledger Live Desktop ([PR 3033](#4), [PR 3031](#2)), Ledger Live
-Mobile ([PR 1310](#3)), Ledger Core Library ([PR 3033](#5)), etc.
+Ledger stack: Ledger Live Desktop ([PR 3031](#2), [PR 3033](#4)), Ledger Live
+Mobile ([PR 1310](#3)), Ledger Live Common ([PR 758](#5)), Ledger Core Library
+([PR 603](#6), [PR 606](#7)).
 
-For end-users, the vulnerability is fixed from Ledger Live version XXX.
+For end-users, the vulnerability is fixed from Ledger Live version 2.7.0.
 
 
 ## Credits
@@ -63,4 +64,6 @@ bounty program.
 2. <a name="2"></a> [LL-2601 Add a warning when we have txs pending confirmation #3031](https://github.com/LedgerHQ/ledger-live-desktop/pull/3031)
 3. <a name="3"></a> [LL-2602 Add a warning when we have txs pending #1310](https://github.com/LedgerHQ/ledger-live-mobile/pull/1310)
 4. <a name="4"></a> [Add Send Bitcoin advanced options #3033](https://github.com/LedgerHQ/ledger-live-desktop/pull/3033)
-5. <a name="5"></a> [Fix synchronization for RBF transaction #603](https://github.com/LedgerHQ/lib-ledger-core/pull/603)
+5. <a name="5"></a> [Bitcoin model to include some coin control features #758](https://github.com/LedgerHQ/ledger-live-common/pull/758)
+6. <a name="6"></a> [Fix synchronization for RBF transaction #603](https://github.com/LedgerHQ/lib-ledger-core/pull/603)
+7. <a name="7"></a> [Add a method in BTC outputs to know if the output could be replaced (RBF) #606](https://github.com/LedgerHQ/lib-ledger-core/pull/606)
