add reference to the kraken blog post

--- a/_lsb/013.md
+++ b/_lsb/013.md
@@ -21,13 +21,14 @@ Ledger's website [FAQ](#1).
 
 In the Nano X threat model, this processor can be fully compromised while
 funds, handled by the ST33 Secure Element, remain secure. However, replacing
-the code on this chip can lead to several attack scenarios.
+the code on this chip can lead to several attack scenarios, as showed by
+the [Kraken Security Labs](#2).
 
 ## Impact
 
 Several attacks can be conducted:
 
-- ["Rubber Ducky"](#2) attacks: an attacker can flash the chip with a physical
+- ["Rubber Ducky"](#3) attacks: an attacker can flash the chip with a physical
   access, and transform it into a malicious device, for example by emulating
   a USB keyboard.
 - Social engineering: a PIN driving the screen is connected to the STM32WB55.
@@ -37,6 +38,9 @@ Several attacks can be conducted:
 
 The Secure Element chip is not affected, nor code running on it or user
 secrets.
+
+These attacks cannot be performed once an application has been installed on the
+device. They can be led for example in a supply chain attack scenario.
 
 ## Workaround
 
@@ -61,4 +65,5 @@ the vulnerabilities through our bug bounty program.
 ## References
 
 1. <a name="1"></a> [Ledger Nano X Troubleshooting. Frequently Asked Questions](https://support.ledger.com/hc/en-us/articles/360015216913)
-2. <a name="2"></a> [USB Rubber Ducky](https://shop.hak5.org/products/usb-rubber-ducky-deluxe)
+1. <a name="2"></a> [Supply Chain Attacks on the Ledger Nano X](https://blog.kraken.com/post/5590/kraken-security-labs-supply-chain-attacks-ledger-nano-x/)
+2. <a name="3"></a> [USB Rubber Ducky](https://shop.hak5.org/products/usb-rubber-ducky-deluxe)
