fit link to kraken article

--- a/_lsb/013.md
+++ b/_lsb/013.md
@@ -65,5 +65,5 @@ the vulnerabilities through our bug bounty program.
 ## References
 
 1. <a name="1"></a> [Ledger Nano X Troubleshooting. Frequently Asked Questions](https://support.ledger.com/hc/en-us/articles/360015216913)
-1. <a name="2"></a> [Supply Chain Attacks on the Ledger Nano X](https://blog.kraken.com/post/5590/kraken-security-labs-supply-chain-attacks-ledger-nano-x/)
+1. <a name="2"></a> [Kraken Security Labs Identifies Supply Chain Attacks Against Ledger Nano X Wallets](https://blog.kraken.com/post/5590/kraken-security-labs-supply-chain-attacks-against-ledger-nano-x/)
 2. <a name="3"></a> [USB Rubber Ducky](https://shop.hak5.org/products/usb-rubber-ducky-deluxe)
