--- a/_lsb/014.md
+++ b/_lsb/014.md
@@ -17,17 +17,17 @@ only, which ensures that cryptocurrency apps cannot use keys from each other.
 For instance, the Zcoin app cannot derive keys on the Dogecoin derivation path
 (`m/44'/3'/`), since its own derivation path is `m/44'/128'/`.
 
-This path restriction wasn't enforced for the Bitcoin app and most of its
+This path restriction was not enforced for the Bitcoin app and most of its
 derivatives, allowing a Bitcoin derivative (eg. Litecoin) to derive public keys
 or sign Bitcoin transactions.
 
 
 ## Technical Analysis
 
-Paths allowed to be used by an app are given during its installation and
-specified in the `Makefile`. For instance, the [Monero app](#2) is allowed to
-use the path `m/44'/128'` (`2147483692/2147483776`) thanks to the `--path`
-parameter:
+When installing an app on the Ledger Nano S/X, a list of allowed paths
+is provided. In the source code, it is usually specified in the `Makefile` of
+the app. For instance, the [Monero app](#2) is allowed to use the path
+`m/44'/128'` (`2147483692/2147483776`) thanks to the `--path` parameter:
 
 ```
 APP_LOAD_PARAMS= --path "2147483692/2147483776" --curve secp256k1 $(COMMON_LOAD_PARAMS) --appFlags 0x240
@@ -40,7 +40,8 @@ public key derivation and transaction signature (using syscall
 
 
 This parameter is however [empty](#3) in the Bitcoin app and in its derivatives
-(at the exception of Qtum), as shown in the following table:
+(at the exception of Qtum). The following table presents the coins affected by
+this lack of restriction:
 
 | Coin            | Affected (signature)            | BIP 44 coin type | Forked coin |
 |-----------------|---------------------------------|------------------|-------------|
@@ -71,7 +72,8 @@ This parameter is however [empty](#3) in the Bitcoin app and in its derivatives
 | Lbry            | Yes                             | 140              | No          |
 | Resistance      | Yes                             | 356              | No          |
 
-Enforcing one ore multiple paths for each coin type is actually a tough topic because:
+Enforcing the restriction to one or multiple paths for each coin type is
+actually a tough topic because:
 
 - Some third party software wallets use incorrect derivation paths. This is a
   specific concern for older coins using third party wallets based on Electrum
@@ -92,18 +94,18 @@ up:
 
 - BIP 45 (`45'/type'`) for Copay multisignatures
 - "GA'/" (`18941'/`) - GreenAddress proprietary for the shared multisignature address
-- Users can also sign on randomly selected paths with PSBT
+- Users can also sign on randomly selected paths with PSBT (Partially Signed Bitcoin Transaction from BIP 174)
 
 
 ## Remediation
 
 We had to make a choice between security and usability, wanting to avoid a
-situation were users funds would be locked and users unable to spend their funds
+situation where user funds would be locked and users unable to spend their funds
 anymore. We thus chose to enforce a path lock in the Bitcoin app itself. If a
-Bitcoin derivative app tries to derive on an unusual path, a warning is
-displayed to the user.
+Bitcoin derivative app tries to perform a derivation on an unusual path, a
+warning is displayed to the user.
 
-In order to allow users to continue to use their Ledger Nano seamlessly with any
+In order to allow users to continue to use their Ledger Nano S/X seamlessly with any
 third party software wallet, this fix doesn't enforce this verification from the
 OS though, which means that the `--path` parameter is still empty. We might add
 an exhaustive path list in the future if we are sure it doesn't break any other
