lsb 014: add disclosure timeline and rephrase a few sentences

--- a/_lsb/014.md
+++ b/_lsb/014.md
@@ -7,6 +7,12 @@ summary: Path derivation too permissive in Bitcoin derivative apps
 
 04 August 2020: Path derivation too permissive in Bitcoin derivative apps
 
+05 August 2020: This security bulletin was updated to mention the publication
+of a new version of the Bitcoin app, add a disclosure timeline section,
+rephrase a sentence in the Remediation section and give a link to the patch.
+
+**Please read our [support article](https://support.ledger.com/hc/en-us/articles/360015738179) if you aren't interested in technical details.**
+
 
 ## Summary
 
@@ -99,11 +105,11 @@ up:
 
 ## Remediation
 
-We had to make a choice between security and usability, wanting to avoid a
-situation where user funds would be locked and users unable to spend their funds
-anymore. We thus chose to enforce a path lock in the Bitcoin app itself. If a
-Bitcoin derivative app tries to perform a derivation on an unusual path, a
-warning is displayed to the user.
+Blocking unusual paths from Bitcoin derivatives apps could fix the issue, but it
+leads to situations where user funds would be locked and users unable to spend
+their funds anymore. We thus chose to enforce a path lock in the Bitcoin app
+itself. If a Bitcoin derivative app tries to perform a derivation on an unusual
+path, a warning is displayed to the user.
 
 In order to allow users to continue to use their Ledger Nano S/X seamlessly with any
 third party software wallet, this fix doesn't enforce this verification from the
@@ -111,8 +117,35 @@ OS though, which means that the `--path` parameter is still empty. We might add
 an exhaustive path list in the future if we are sure it doesn't break any other
 wallets.
 
-This security bulletin will be updated once a new version of the Bitcoin app is
-available.
+The vulnerability is fixed from version 1.4.6 of the Bitcoin app (being used as
+a library by the other apps) thanks to the commit [3f85053e](#5).
+
+
+## Disclosure timeline
+
+| Date                     | Action                                                          |
+|--------------------------|-----------------------------------------------------------------|
+| 2020-05-02               | monokh sent to bounty@ledger.fr a vulnerability report about app isolation bypass. |
+| 2020-05-04               | Ledger's security team acknowledged the reception and starts investigating. |
+| 2020-05-10 to 2020-05-13 | monokh and the Ledger security team discussed the issue. Ledger's security team started coordinating other Ledger teams to fix it. A disclosure date is being set to 90 days (that is, 2020-08-02). |
+| 2020-08-02               | 90 days deadline reached. Ledger started the test and release process for the fixed Bitcoin app. |
+| 2020-08-04               | monokh published the details of the vulnerability, without informing Ledger's security team beforehand through bounty@ledger.fr. |
+| 2020-08-05               | Ledger updated the Bitcoin app. |
+
+In this case, we regret not having respected the disclosure deadline, leading
+the security researcher to publish a blogpost on his website before a fix was
+made available for the users.
+
+Besides other issues being handled at the same time, internal discussions to
+find an appropriate fix and coordination with other engineering teams took
+longer than expected. This led to a new version of the Bitcoin app being
+published after the scheduled deadline (that was set to 90 days after the
+vulnerability report).
+
+Miscommunication didn't help solving that issue sooner. The reporter sent
+Twitter DM messages that were missed by most of the security engineers. Indeed,
+the bounty@ledger.fr email address is the only way to reach the whole security
+team.
 
 
 ## Credits
@@ -127,3 +160,4 @@ vulnerability through our bug bounty program.
 2. <a name="2"></a> [app-monero/Makefile](https://github.com/LedgerHQ/app-monero/blob/a91441eadcc98a49cbb0d02b780edfe18267924c/Makefile#L27)
 3. <a name="3"></a> [app-bitcoin/Makefile](https://github.com/LedgerHQ/app-bitcoin/blob/a23b0abf86cc473e404c7781fab9b76ef8a76ff1/Makefile#L23)
 4. <a name="4"></a> [Applications of HD Trees](https://ledger.readthedocs.io/en/latest/background/hd_use_cases.html)
+5. <a name="5"></a> [GitHub - Merge pull request from GHSA-7gvm-55wh-x2c4](https://github.com/LedgerHQ/app-bitcoin/commit/3f85053eed52b3228de24a9aac48ed9ede9d6aee)
