Fix broken links

--- a/_lsb/014.md
+++ b/_lsb/014.md
@@ -159,5 +159,5 @@ vulnerability through our bug bounty program.
 1. <a name="1"></a> [Threat Model - App Isolation](https://donjon.ledger.com/threat-model/app-isolation/)
 2. <a name="2"></a> [app-monero/Makefile](https://github.com/LedgerHQ/app-monero/blob/a91441eadcc98a49cbb0d02b780edfe18267924c/Makefile#L27)
 3. <a name="3"></a> [app-bitcoin/Makefile](https://github.com/LedgerHQ/app-bitcoin/blob/a23b0abf86cc473e404c7781fab9b76ef8a76ff1/Makefile#L23)
-4. <a name="4"></a> [Applications of HD Trees](https://ledger.readthedocs.io/en/latest/background/hd_use_cases.html)
+4. <a name="4"></a> [Applications of HD Trees](https://developers.ledger.com/docs/nano-app/psd-applications/)
 5. <a name="5"></a> [GitHub - Merge pull request from GHSA-7gvm-55wh-x2c4](https://github.com/LedgerHQ/app-bitcoin/commit/3f85053eed52b3228de24a9aac48ed9ede9d6aee)
