booba: fix typo

--- a/_posts/2021-11-22-booba_nft.md
+++ b/_posts/2021-11-22-booba_nft.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "On the security of Booba's music video and NFTs"
-summary: "How we access the exclusive music video without any NFTs."
-description: "How we access the exclusive music video without any NFTs."
+summary: "How we accessed the exclusive music video without any NFTs."
+description: "How we accessed the exclusive music video without any NFTs."
 featured-img: booba
 author: The Donjon
 ---
