booba: fix line return

--- a/_posts/2021-11-22-booba_nft.md
+++ b/_posts/2021-11-22-booba_nft.md
@@ -11,7 +11,7 @@ author: The Donjon
 
 The 3rd of November 2021, [Booba](https://twitter.com/booba) (the french rapper who created the label *La Piraterie Music*) put a set of 5 NFTs [up for sale](https://twitter.com/booba/status/1455756572936790019), for a total of 5000 of each of these animated cards. The totality of these NFTs were sold in a few days for 150 ETH (0.006 ETH each), that is more than $700.000 at this date. As a bonus, lucky owners of one of these NFTs were allowed to see the exclusive music video *TN* since the [8 November 2021](https://twitter.com/booba/status/1457766868299681797).
 
-> Les rappeurs m'envient, sont tous en galère.
+> Les rappeurs m'envient, sont tous en galère.\
 > -- *Boulbi, Ouest Side*
 
 We were a bit curious and wondered how the music video was protected and if we could enjoy it even if we didn't buy any [NFTs](https://opensea.io/collection/booba-tn).
