booba: fix typo

--- a/_posts/2021-11-22-booba_nft.md
+++ b/_posts/2021-11-22-booba_nft.md
@@ -128,4 +128,4 @@ This blogpost shows that even if the cryptography powering this NFT event is sou
 > La piraterie n'est jamais finie !\
 > -- *Walabok, Nero Nemesis*
 
-Once contacted (finding the right contact was actually the more difficult part), the developers from [RenaissanceNFT](https://twitter.com/RenaissanceNFT) were super cooperative and responsive. The issue was fixed within less than an hour and the protection access can't be bypassed anymore.
+Once contacted (finding the right contact was actually the most difficult part), the developers from [RenaissanceNFT](https://twitter.com/RenaissanceNFT) were super cooperative and responsive. The issue was fixed within less than an hour and the protection access can't be bypassed anymore.
