booba: fix typo

--- a/_posts/2021-11-22-booba_nft.md
+++ b/_posts/2021-11-22-booba_nft.md
@@ -20,7 +20,7 @@ We were a bit curious and wondered how the music video was protected and if we c
 
 ## How does the music video protection work?
 
-In order to see the video, owners of the NFTs have to visit the page [/mon-nft](https://nft.booba.store/mon-nft) and use their crypto wallet (such as Metamask or WalletConnect) to sign the Ethereum message `"Pour accéder à TN, merci de bien vouloir signer ce message"` with the same wallet than the one used to the NFTs. Once signed, a POST request with a JSON body following this format is sent by the web browser to a [web service](https://m5b1e7khw3.execute-api.eu-west-3.amazonaws.com/intermediate/tn) hosted on AWS:
+In order to see the video, owners of the NFTs have to visit the page [/mon-nft](https://nft.booba.store/mon-nft) and use their crypto wallet (such as Metamask or WalletConnect) to sign the Ethereum message `"Pour accéder à TN, merci de bien vouloir signer ce message"` with the same wallet than the one used to buy the NFTs. Once signed, a POST request with a JSON body following this format is sent by the web browser to a [web service](https://m5b1e7khw3.execute-api.eu-west-3.amazonaws.com/intermediate/tn) hosted on AWS:
 
 ```json
 {
