lsb 018: fix wording

--- a/_lsb/018.md
+++ b/_lsb/018.md
@@ -18,7 +18,7 @@ A vulnerability has been discovered by a company commissioned by Ledger to perfo
 
 Our pentesting policy is to perform only white box assessments. We gave full access (full access to servers and product source code) to the team in charge of the audit, so that they can perform the most comprehensive security tests.
 
-Audit is performed in a test environment, completely separate from our own environments (different networks and secrets). The company who discovered the vulnerability would not have been able to exploit it on our environments, as the vulnerable component cannot be reached without valid credentials and network access.
+Audit is performed in a test environment, completely separate from our own environments (different networks and secrets). The company that discovered the vulnerability would not have been able to exploit it on our environments, as the vulnerable component cannot be reached without valid credentials and network access.
 
 Exploiting this vulnerability requires first to take full control of our HSM host servers (our most critical servers). This requires SSH access to our servers. These servers are accessible only through a VPN, restricted to a small subset of our infrastructure team, with IP restriction and hardware authentication.
 
